# SentinelAI

./: .catalystrc  .gitignore  DEMO_SCRIPT.md  Dockerfile  Makefile  PRESENTATION.md  README.md  TODO.md  catalyst.json  docker-compose.yml  frontend_plan.md  package-lock.json  package.json  prisma.config.ts  pytest.ini  render.yaml  start-dev.bat  tailwind.config.ts
app/: layout.tsx  page.tsx
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: catalyst.py  config.py  database.py  dependencies.py  exceptions.py  logging.py  middleware.py  security.py  synthetic_data.py
backend/app/db/: indexes.py  seed.py  seed_official.py
backend/app/llm/: graph.py  state.py
backend/app/ml/: __init__.py  financial.py  forecasting.py  hotspot.py  network.py  profiling.py  sociological.py
backend/app/models/: __init__.py  analytics.py  associations.py  crime.py  official_schema.py  user.py
backend/app/schemas/: analytics.py  crime.py  user.py
backend/app/services/: embedding_service.py  export_service.py  neo4j_service.py  openai_client.py  qdrant_service.py  redis_service.py  sync_service.py  translation_service.py
backend/app/utils/: helpers.py
backend/migrations/: alembic.ini  env.py
backend/migrations/versions/: 001_initial_schema.py
backend/ml-services/financial/: __init__.py  data.py  model.py
backend/ml-services/forecasting/: data.py  model.py  requirements.txt
backend/ml-services/hotspot/: __init__.py  model.py  requirements.txt
backend/tests/: conftest.py  test_agent_graph.py  test_api_endpoints.py
(+360 files in other folders)
