[project]
name = "sentinelai-backend"
version = "1.0.0"
description = "Intelligent Conversational Crime Intelligence and Analytics Platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy==2.0.35",
    "alembic==1.13.2",
    "asyncpg==0.30.0",
    "psycopg2-binary==2.9.9",
    "neo4j==5.23.1",
    "qdrant-client==1.10.1",
    "redis[hiredis]==5.1.1",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.12",
    "httpx==0.27.2",
    "openai==1.51.0",
    "langchain==0.3.5",
    "langchain-openai==0.2.2",
    "langgraph==0.2.32",
    "langchain-community==0.3.4",
    "sentence-transformers==3.1.1",
    "scikit-learn==1.5.2",
    "xgboost==2.1.1",
    "prophet==1.1.6",
    "networkx==3.3",
    "shap==0.46.0",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "scipy==1.14.1",
    "plotly==5.24.1",
    "matplotlib==3.9.2",
    "seaborn==0.13.2",
    "reportlab==4.2.2",
    "weasyprint==62.3",
    "whisper==1.12.0",
    "indic-trans==2.4.1",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "httpx==0.27.2",
    "celery==5.4.0",
    "flower==2.0.1",
    "sse-starlette==2.1.3",
    "tenacity==9.0.0",
    "loguru==0.7.2",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "black==24.8.0",
    "ruff==0.6.5",
    "mypy==1.11.2",
    "pre-commit==3.8.0",
]
